Refactored CommandManager.java and added a plugin file